# KanbanCLI

./: .gitignore  CMakeLists.txt  README.md  run_kanban.bat
.github/workflows/: ci.yml  release.yml
src/: AppState.hpp  KanbanBoard.cpp  KanbanBoard.hpp  StorageManager.cpp  StorageManager.hpp  Task.hpp  Theme.hpp  main.cpp
tests/: tests.cpp
